--- a/project-control-center.yml
+++ b/project-control-center.yml
@@ -79,6 +79,9 @@ services:
       - /etc/localtime:/etc/localtime:ro
     environment:
       - MYSQL_ROOT_PASSWORD= root
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=root
+      - MYSQL_DATABASE=projectservice
     command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     deploy:
       replicas: 1
